@@ -1,3 +1,8 @@
+2015-03-05  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/65310
+	* gcc.dg/vect/pr65310.c: New testcase.
+
 2015-03-05  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/64834
